Fix header, typos, kontakt page

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,10 +1,16 @@
 header
-  img(id="header-img", src="/assets/header.jpg" alt="")
-  img(id="logo",src="/assets/logo-2.png" alt="")
+  ul#hours-location
+    li
+      |Di&mdash;Do 17:00&mdash;1:00
+    li
+      |Fr&mdash;Sa 17:00&mdash;2:00
+    li
+      |Sedanplatz 9
+    li 
+      |65183 Wiesbaden
   div#header-logo-social-icons
-    a 
+    img(id="logo",src="/assets/logo-2.png" alt="")
+    a(href="https://www.facebook.com/schoppenhofwiesbaden/", target="_new") 
       img(src="/assets/social-fb.png")
-    a 
+    a(href="https://plus.google.com/+SchoppenhofWiesbaden", target="_new") 
       img(src="/assets/social-g-plus.png")
-div#header-contact 
-  |Di-Do 17:00 - 1:00, Fr-Sa 17:00 - 2:00 &nbsp;&nbsp;| &nbsp;&nbsp;Sedanplatz 965183 Wiesbaden
