--- a/src/kontakt/index.pug
+++ b/src/kontakt/index.pug
@@ -10,20 +10,38 @@ html
     div.h2-decoration 
       h2 KONTAKT
     div.grid
-      section.column-1-2
-        p
-          |Schoppenhof
-          br
-          |Inh. Martin Hoenes
-          br
-          |Sedanplatz 9
-          br
-          |65183 Wiesbaden
-          br
-          |Telefon: 0611 44866961
-          br
-          |eMail: 
-          a(href="mailto:mail@schoppenhof-wiesbaden.de") mail@schoppenhof-wiesbaden.de
-          br
-          span.reservation Reservierungen bitte nur telefonisch von Di-Sa ab 17.00 Uhr.
-    
+      //- section.column-1-2
+      //-   div#map
+      section.location-copy
+        div#location
+          p 
+            |Schoppenhof 
+            br
+            |Inh. Martin Hoenes
+            br
+            |Sedanplatz 9
+            br
+            |65183 Wiesbaden
+            br 
+            |0611 44866961
+            br
+            a(href="mailto:mail@schoppenhof-wiesbaden.de") mail@schoppenhof-wiesbaden.de
+            br
+            span Reservierungen bitte nur telefonisch von Di-Sa ab 17.00 Uhr.
+        div#opening-hours
+          ul
+            li 
+              span.day Dienstag	
+              span.hour 17:00&mdash;1:00
+            li 
+              span.day Mittwoch
+              span.hour 17:00&mdash;1:00
+            li 
+              span.day Donnerstag
+              span.hour 17:00&mdash;1:00
+            li 
+              span.day Freitag
+              span.hour 17:00&mdash;2:00
+            li 
+              span.day Samstag
+              span.hour 17:00&mdash;2:00
