--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -56,7 +56,7 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Grüne Soße 
             br.mobile-lr
-            span.menu-item-desc_inline mit Petersilienkarto eln und 
+            span.menu-item-desc_inline mit Petersilienkartoffeln und 
               br.mobile-lr
               |gekochten Bioeiern
             div.menu-item-price-list
@@ -66,7 +66,7 @@ html(lang="de-DE")
             br.mobile-lr 
             span.menu-item-desc_inline mit Sauerkraut und 
               br.mobile-lr
-              |Karto elpüree
+              |Kartoffelpüree
             div.menu-item-price-list
               span.price 7,80 €
           li
@@ -117,7 +117,7 @@ html(lang="de-DE")
             br.mobile-lr 
             span.menu-item-desc_inline auf Sauerkraut 
               br.mobile-lr
-              |und hausgemachtem Karto elpüree
+              |und hausgemachtem Kartoffelpüree
             div.menu-item-price-list
               span.price 11,80 €
           li
@@ -129,13 +129,13 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Frankfurter Schnitzel 
             br.mobile-lr
-            span.menu-item-desc_inline mit Grüner Soße und Bratkarto eln
+            span.menu-item-desc_inline mit Grüner Soße und Bratkartoffeln
             div.menu-item-price-list
               span.price 12,80 €
           li
             span.menu-item-name_inline Kassler vom Schweinerücken 
             br.mobile-lr
-            span.menu-item-desc_inline an Thymianjus mit Bratkarto eln 
+            span.menu-item-desc_inline an Thymianjus mit Bratkartoffeln 
               br.mobile-lr
               |und Möhrengemüse
             div.menu-item-price-list
@@ -150,7 +150,7 @@ html(lang="de-DE")
               |mit Wirsinggemüse
             br 
             div.price-align-bottom
-              span.menu-item-desc_inline und Petersilienkarto eln
+              span.menu-item-desc_inline und Petersilienkartoffeln
               div.menu-item-price-list
                 span.price 14,20 €
           li
@@ -160,7 +160,7 @@ html(lang="de-DE")
               br.mobile-lr
               |oder Rotweinzwiebeln, 
               br.mobile-lr
-              |dazu Bratkarto eln und Salat
+              |dazu Bratkartoffeln und Salat
             div.menu-item-price-list
               span.price 15,90 €
         h3.menu-category.menu-category_extra-margin NachSpeisen
@@ -202,6 +202,6 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Nürnberger Bratwürstchen 
               br.mobile-lr
-              |mit Karto elpüree
+              |mit Kartoffelpüree
             div.menu-item-price-list
               span.price 4,80 €
