--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -2,7 +2,7 @@
 @import '_header'
 @import '_menu'
 @import '_nav'
-@import '_location-times'
+@import '_contact'
 @import '_grid'
 
 body
@@ -50,3 +50,5 @@ br.mobile-lr
 @media screen and (max-width: break-point)
   br.mobile-lr
     display: initial
+  .desktop-only
+    display: none
