--- a/src/stylus/_nav.styl
+++ b/src/stylus/_nav.styl
@@ -2,22 +2,20 @@ nav
   padding: 20px;
   background-color: #fff
   z-index: 999
-  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.1)
   text-align: center
 
-  p 
-    display: none
   ul 
     margin: 0
     padding: 0
     list-style-type: none
     width: 100%
-    //text-align: center
     
-  li 
-    display: inline-block
-    margin-left: 30px
-    text-transform: uppercase
+    li 
+      display: inline-block
+      margin-left: 30px
+      text-transform: uppercase
+      &:first-child
+        margin-left: 0
 
 #main a#getranke-nav,
 #speisen a#speisen-nav,
@@ -25,20 +23,3 @@ nav
 #contact a#kontakt-nav
   color: secondary
   border-bottom: 2px solid
-
-@media screen and (max-width: break-point)
-  nav
-    padding: 10px
-    p
-      display: block
-    ul 
-      overflow: hidden
-      max-height: 0
-      transition: max-height .3s ease-out
-      &.open
-        max-height: 300px
-    li 
-      display: block
-      margin-left: 0
-      text-align: center
-      padding-bottom: 10px
