--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -9,7 +9,7 @@ header
     li 
       |65183 Wiesbaden
   div#header-logo-social-icons
-    img(id="logo",src="/assets/logo-2.png" alt="")
+    img(id="logo",src="/assets/logo.png" alt="")
     a(href="https://www.facebook.com/schoppenhofwiesbaden/", target="_new") 
       img(src="/assets/social-fb.png")
     a(href="https://plus.google.com/+SchoppenhofWiesbaden", target="_new") 
