--- a/src/stylus/_header.styl
+++ b/src/stylus/_header.styl
@@ -1,7 +1,7 @@
 header 
   position: relative
   padding-top: 42%
-  background-image: url(/assets/header-2.jpg)
+  background-image: url(/assets/header.jpg)
   background-repeat: no-repeat
   background-size: 100%
   background-position: 50% 0
