--- a/src/includes/_meta.pug
+++ b/src/includes/_meta.pug
@@ -1,15 +1,24 @@
-<!-- Facebook OpenGraph -->
-meta(property="fb:profile_id" content="314494352017935")
+- var ogLink = 'http://schoppenhof-wiesbaden.de' + (link || '')
+meta(charset="UTF-8")
+meta(name="viewport" content="width=device-width, initial-scale=1")
 meta(property="og:type" content="website")
 meta(property="og:locale" content="de_DE")
-meta(property="og:url" content="http://schoppenhof-wiesbaden.de")
+meta(property="og:url" content=ogLink)
 meta(property="og:title" content="Schoppenhof Wiesbaden")
 meta(property="og:description" content="Das neue Apfelweinlokal in Wiesbaden")
-meta(property="og:image" content="http://schoppenhof-wiesbaden.de/assets/og-image.png")
-meta(property="og:image:type" content="image/png")
+meta(property="og:image" content="http://schoppenhof-wiesbaden.de/assets/og-image.jpg")
+meta(property="og:image:type" content="image/jpg")
 meta(property="og:image:width" content="1200")
 meta(property="og:image:height" content="630")
 meta(property="og:site_name" content="Schoppenhof Wiesbaden")
 meta(property="og:see_also" content="https://www.facebook.com/pg/schoppenhofwiesbaden")
+meta(name="msapplication-TileImage" content="/assets/icons/schoppenhof_logo_schwarz_transparenz-300x300.png")
+
 title 
-  EBBELWOI &amp; MEHR &#8211; Die neue Apfelwein Kneipe in Wiesbaden
+  |EBBELWOI &amp; MEHR &#8211; Die neue Apfelwein Kneipe in Wiesbaden
+
+link(rel="icon" href="/assets/icons/schoppenhof_logo_schwarz_transparenz-100x100.png" sizes="32x32")
+link(rel="icon" href="/assets/icons/schoppenhof_logo_schwarz_transparenz-300x300.png" sizes="192x192")
+link(rel="apple-touch-icon-precomposed" href="/assets/icons/schoppenhof_logo_schwarz_transparenz-300x300.png")
+
+script(type="text/javascript",src="http://fast.fonts.net/jsapi/3fa2210f-af24-4cd0-a9fe-a0f176f344e5.js")
