--- a/src/index.pug
+++ b/src/index.pug
@@ -1,10 +1,7 @@
 html(lang="de-DE")
   head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1")
+    include includes/_meta.pug
     link(rel="stylesheet", href="./css/main.css")
-    link(rel="icon" href="http://schoppenhof-wiesbaden.de/wp-content/uploads/2017/01/schoppenhof_logo_schwarz_transparenz-100x100.png" sizes="32x32")
-    script(type="text/javascript",src="http://fast.fonts.net/jsapi/3fa2210f-af24-4cd0-a9fe-a0f176f344e5.js")
   body#main
     include includes/_header.pug
     include includes/_nav.pug
