--- a/src/stylus/_grid.styl
+++ b/src/stylus/_grid.styl
@@ -21,6 +21,7 @@ grid-margin = 10px
 
 @media screen and (max-width: break-point)
   .grid
+    max-width: 450px
     .column-1-2
       float: none
       width: 100%
