--- a/src/kontakt/index.pug
+++ b/src/kontakt/index.pug
@@ -1,8 +1,7 @@
 html
   head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    script(type="text/javascript",src="http://fast.fonts.net/jsapi/3fa2210f-af24-4cd0-a9fe-a0f176f344e5.js")
+    - var link = '/kontakt'
+    include ../includes/_meta.pug
     link(rel="stylesheet", href="../css/main.css")
   body#contact
     include ../includes/_header
@@ -10,8 +9,6 @@ html
     div.h2-decoration 
       h2 KONTAKT
     div.grid
-      //- section.column-1-2
-      //-   div#map
       section.location-copy
         div#location
           p 
