Modify menu for summer 2017

--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -31,25 +31,19 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 5,20 €
           li
-            span.menu-item-name_inline Hessischer Suppeneintopf 
+            span.menu-item-name_inline Hausgemachter Wurstsalat 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit feinen Tafelspitzwürfeln
+            span.menu-item-desc_inline_normal-font in einer Vinaigrette mit Brot und Butter
             div.menu-item-price-list
-              span.price 5,80 €
-          li
-            span.menu-item-name_inline Frankfurter Würstchen 
-            br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Brot und Senf
-            div.menu-item-price-list
-              span.price 5,20 €
+              span.price 6,20 €
           li
             span.menu-item-name_inline Großer bunter Salatteller
             div.menu-item-price-list
-              span.price 5,40 €
+              span.price 6,40 €
           li
             span.menu-item-name_inline Kleiner bunter Salatteller
             div.menu-item-price-list
-              span.price 3,20 €
+              span.price 3,40 €
         h3.menu-category.menu-category_extra-margin HauptSpeisen
         ul 
           li
@@ -59,15 +53,15 @@ html(lang="de-DE")
               br.mobile-lr
               |gekochten Bioeiern
             div.menu-item-price-list
-              span.price 7,60 €
+              span.price 7,80 €
           li
             span.menu-item-name_inline Grobe Bratwurst 
             br.mobile-lr 
-            span.menu-item-desc_inline_normal-font mit Sauerkraut und 
+            span.menu-item-desc_inline_normal-font mit Kartoffelsalat und 
               br.mobile-lr
-              |Kartoffelpüree
+              |Salatbeilage
             div.menu-item-price-list
-              span.price 7,80 €
+              span.price 7,20 €
           li
             span.menu-item-name_inline Matjes hausgemacht 
             br.mobile-lr 
@@ -77,7 +71,7 @@ html(lang="de-DE")
               br.mobile-lr
               |und Bratkartoffeln
             div.menu-item-price-list
-              span.price 8,60 €
+              span.price 8,80 €
           li
             span.menu-item-name_inline Großer Salatteller 
             br.mobile-lr
@@ -96,7 +90,7 @@ html(lang="de-DE")
               br.mobile-lr
               |und Apfelweinvinaigrette
             div.menu-item-price-list
-              span.price 8,40 €
+              span.price 8,60 €
           li
             span.menu-item-name_inline Großer Salatteller 
             br.mobile-lr
@@ -110,13 +104,11 @@ html(lang="de-DE")
               br.mobile-lr
               |und Salat
             div.menu-item-price-list
-              span.price 8,20 €
+              span.price 8,60 €
           li
             span.menu-item-name_inline Saftig gekochtes Rippchen 
             br.mobile-lr 
-            span.menu-item-desc_inline_normal-font auf Sauerkraut 
-              br.mobile-lr
-              |und hausgemachtem Kartoffelpüree
+            span.menu-item-desc_inline_normal-font mit Bratkartoffeln und Salat 
             div.menu-item-price-list
               span.price 11,80 €
           li
@@ -132,26 +124,25 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 12,80 €
           li
-            span.menu-item-name_inline Kassler vom Schweinerücken 
+            span.menu-item-name_inline Handkässchnitzel „Schoppen Hof Style” 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font an Thymianjus mit Bratkartoffeln 
+            span.menu-item-desc_inline_normal-font mit Zwiebel-Apfelsud, dazu Bratkartoffeln
               br.mobile-lr
-              |und Möhrengemüse
+              |und Salat
             div.menu-item-price-list
-              span.price 12,80 €
+              span.price 13,40 €
           li
-            span.menu-item-name_inline Im Gemüsesud 
-              br.mobile-lr
-              |gesottener Tafelspitz 
+            span.menu-item-name_inline Kalbsschnitzel paniert 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font auf Meerrettichsauce 
-              br.mobile-lr
-              |mit Wirsinggemüse
-            br 
-            div.price-align-bottom
-              span.menu-item-desc_inline_normal-font und Petersilienkartoffeln
-              div.menu-item-price-list
-                span.price 14,20 €
+            span.menu-item-desc_inline_normal-font mit Kartoffelsalat und kleinem Salat
+            div.menu-item-price-list
+              span.price 14,80 €
+          li
+            span.menu-item-name_inline Kalbsschnitzel paniert 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font mit Grüner Soße und Bratkartoffeln
+            div.menu-item-price-list
+              span.price 15,80 €
           li
             span.menu-item-name_inline Rumpsteak 
             br.mobile-lr
@@ -165,25 +156,19 @@ html(lang="de-DE")
         h3.menu-category.menu-category_extra-margin NachSpeisen
         ul 
           li
-            span.menu-item-name_inline Vanilleeis mit Schokosoße 
-              br.mobile-lr
-              |oder Roter Grütze
+            span.menu-item-name_inline Schokoladeneis mit Sahne
             div.menu-item-price-list
               span.price 3,80 €
           li
-            span.menu-item-name_inline Kaiserschmarrn 
+            span.menu-item-name_inline Vanilleeis mit frischen Erdbeeren 
               br.mobile-lr
-              |mit Roter Grütze 
-              br.mobile-lr
-              |und Vanilleeis
+              |und Sahne 
             div.menu-item-price-list
-              span.price 4,20 €
+              span.price 4,90 €
           li
-            span.menu-item-name_inline Kaiserschmarrn groß 
-              br.mobile-lr
-              |mit Roter Grütze und Vanilleeis
+            span.menu-item-name_inline Hessisches Apfeltiramisu im Glas 
             div.menu-item-price-list
-              span.price 7,20 €
+              span.price 3,90 €
         h3.menu-category.menu-category_extra-margin Für Kleine Gäste
         ul 
           li
@@ -191,7 +176,7 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 3,00 €
           li
-            span.menu-item-name_inline Wiener Schnitzel mit Pommes
+            span.menu-item-name_inline Schnitzel Wiener Art mit Pommes
             div.menu-item-price-list
               span.price 6,50 €
           li
@@ -201,6 +186,6 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Nürnberger Bratwürstchen 
               br.mobile-lr
-              |mit Kartoffelpüree
+              |mit Pommes
             div.menu-item-price-list
               span.price 4,80 €
