--- a/src/index.pug
+++ b/src/index.pug
@@ -62,6 +62,8 @@ html(lang="de-DE")
               span.price 9,50 €
               span.quantity 2l 
               span.price 12,50 €
+              span.quantity 3l 
+              span.price 18,90 €
 
           li.extra-margin-bottom 
             span.menu-item-name FLASCHE 0,75
@@ -147,7 +149,7 @@ html(lang="de-DE")
               span.quantity 0,4l 
               span.price 2,90 €
               span.quantity 0,7l 
-              span.price 3,50 €
+              span.price 3,80 €
 
           li 
             span.menu-item-name Selters still
@@ -178,6 +180,8 @@ html(lang="de-DE")
                 span.price 2,20 €
                 span.quantity 0,4l 
                 span.price 3,50 €
+                span.quantity 0,7l 
+                span.price 3,80 €
 
           li 
             span.menu-item-name Kraftmalz
@@ -395,7 +399,8 @@ html(lang="de-DE")
               span.quantity 1l 
               span.price 17,00 €
 
-        h3.menu-category Spiritiuosen 2 cl
+        h3.menu-category Spiritiuosen 2 
+          span.menu-category_lowercase cl
         ul 
           li
             span.menu-item-name Obstbrandspezialitäten aus dem Schwarzwald
@@ -415,7 +420,7 @@ html(lang="de-DE")
           li
             span.menu-item-name Calvados Mispelchen
             div.menu-item-price-list
-              span.price 3,20 €
+              span.price 3,40 €
 
           li
             span.menu-item-name Malteser
@@ -458,7 +463,7 @@ html(lang="de-DE")
               span.price 2,50 €
 
           li
-            span.menu-item-name Underberg
+            span.menu-item-name Dauborner Kümmel
             div.menu-item-price-list
               span.price 2,50 €
 
