--- a/src/stylus/_menu.styl
+++ b/src/stylus/_menu.styl
@@ -33,6 +33,9 @@
 .menu-category_small
   font-size: 10pt
 
+.menu-category_lowercase
+  text-transform: none
+
 .menu-category_extra-margin
   margin: 45px 0 30px 0
 
