--- a/src/kontakt/index.pug
+++ b/src/kontakt/index.pug
@@ -42,3 +42,38 @@ html
             li 
               span.day Samstag
               span.hour 17:00&mdash;2:00
+      section#impressum
+        h2 Impressum:
+
+        p Angaben gemäß §5 TMG
+        h3 Herausgeber/ Domaininhaber
+        p
+          |Martin Hönes/ 
+          br 
+          |Schoppen Hof
+          br 
+          |Sedanplatz 9
+          br 
+          |65183 Wiesbaden
+
+        h3 Inhaber/ Vertretungsberechtigter
+        p
+          |Martin Hönes
+          br 
+          |Adresse s.o.
+          br 
+          |hoenes.martin@gmx.de
+          br 
+          |0611/44866961
+
+        h3 Inhaltlich Verantwortlicher
+        p 
+          |Martin Hönes
+          br 
+          |gemäß §55 Abs.2RStV
+          br 
+          |Adresse s.o.
+          br 
+          |Zuständige Aufsichtsbehörde
+          br 
+          |Gewerbeamt Stadt Wiesbaden
