--- a/src/stylus/_contact.styl
+++ b/src/stylus/_contact.styl
@@ -3,6 +3,12 @@
   section 
     font-size: 20px
     font-weight: bold
+  section#impressum
+    font-size: 16px
+    font-weight: normal
+    h2, h3
+      text-align: center
+      margin-bottom: 5px
   p  
     text-align: center
     margin-top: 0
@@ -17,7 +23,6 @@
       transform: translateX(-50%)
   .hour 
     float: right
-    // margin-right: 40%
 
   #map
     width: 100%
