Edit menu for winter 2017

--- a/src/index.pug
+++ b/src/index.pug
@@ -125,6 +125,12 @@ html(lang="de-DE")
               span.price 3,60 €
 
           li
+            span.menu-item-name Büble Edelweissbier Alkoholfrei
+            div.menu-item-price-list
+              span.quantity 0,5l 
+              span.price 3,60 €
+
+          li
             span.menu-item-name Büble Radler naturtrüb 
               sup 2
             div.menu-item-price-list
@@ -152,10 +158,16 @@ html(lang="de-DE")
               span.price 3,80 €
 
           li 
-            span.menu-item-name Selters still
+            span.menu-item-name Wasser 
+              br.mobile-lr
+              |still
             div.menu-item-price-list
-              span.quantity Flasche 0,2l 
-              span.price 2,20 €
+              span.quantity 0,2l 
+              span.price 1,80 €
+              span.quantity 0,4l 
+              span.price 2,90 €
+              span.quantity 0,7l 
+              span.price 3,80 €
 
           li 
             span.menu-item-name Coca-Cola  
@@ -177,9 +189,9 @@ html(lang="de-DE")
               span.menu-item-name Zitronenlimo
               div.menu-item-price-list
                 span.quantity 0,2l 
-                span.price 2,20 €
+                span.price 1,90 €
                 span.quantity 0,4l 
-                span.price 3,50 €
+                span.price 3,20 €
                 span.quantity 0,7l 
                 span.price 3,80 €
 
@@ -262,7 +274,7 @@ html(lang="de-DE")
               span.menu-item-desc_inline Rauenthaler Steinmächer
             div.menu-item-price-list
               span.quantity 0,2l 
-              span.price 3,90 €
+              span.price 4,10 €
               span.quantity 1l 
               span.price 19,00 €
 
@@ -279,7 +291,7 @@ html(lang="de-DE")
               span.price 17,80 €
 
           li.extra-margin-bottom  
-            span.menu-item-name Müller-Thurgau
+            span.menu-item-name Müller-Thurgau 
               br.mobile-lr 
               span.menu-item-name_small halbtrocken 
               sup 6
@@ -316,7 +328,7 @@ html(lang="de-DE")
               span.menu-item-desc_inline Baden
             div.menu-item-price-list
               span.quantity 0,2l 
-              span.price 3,90 €
+              span.price 4,10 €
               span.quantity 1l 
               span.price 19,00 €
 
@@ -343,7 +355,7 @@ html(lang="de-DE")
               span.price 23,50 €
 
           li
-            span.menu-item-name Sankt Laurent
+            span.menu-item-name Sankt Laurent 
               br.mobile-lr 
               span.menu-item-name_small trocken 
               sup 6
@@ -363,6 +375,17 @@ html(lang="de-DE")
               span.price 3,50 €
               span.quantity 0,75l 
               span.price 18,00 €
+
+          li
+            span.menu-item-name Premiumapfelsekt 
+              br.mobile-lr
+              span.menu-item-name_small trocken  
+              sup 6
+            span.menu-item-brand aus Ontario Äpfeln, 
+              span.menu-item-desc_inline Kelterei Schneider
+            div.menu-item-price-list
+              span.quantity 0,75l 
+              span.price 24,00 €
 
         h3.menu-category Vermischtes
         ul 
@@ -423,11 +446,6 @@ html(lang="de-DE")
               span.price 3,40 €
 
           li
-            span.menu-item-name Malteser
-            div.menu-item-price-list
-              span.price 2,60 €
-
-          li
             span.menu-item-name Aquavit
             div.menu-item-price-list
               span.price 2,90 €
@@ -477,6 +495,11 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 2,00 €
       
+          li
+            span.menu-item-name Pfeffi
+            div.menu-item-price-list
+              span.price 2,00 €
+
       ul.menu-key
         li 1) MIT FARBSTOFF
         li 2) MIT SÜSSUNGSMITTELN
