--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -13,9 +13,9 @@ html(lang="de-DE")
         h3.menu-category.menu-category_extra-margin Vorspeisen
         ul 
           li
-            span.menu-item-name_inline Brezel mit Spundekäs, 
+            span.menu-item-name_inline Brezel mit Spundekäs 
             div.menu-item-price-list
-              span.price 2,80 €
+              span.price 3,40 €
           li
             span.menu-item-name_inline Handkäs 
             br.mobile-lr
@@ -31,11 +31,17 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 5,20 €
           li
+            span.menu-item-name_inline Kürbis-Apfelwein-Suppe 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font mit Ingwer verfeinert, dazu Brot
+            div.menu-item-price-list
+              span.price 4,90 €
+          li
             span.menu-item-name_inline Hausgemachter Wurstsalat 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font in einer Vinaigrette mit Brot und Butter
             div.menu-item-price-list
-              span.price 6,20 €
+              span.price 6,80 €
           li
             span.menu-item-name_inline Großer bunter Salatteller
             div.menu-item-price-list
@@ -53,15 +59,17 @@ html(lang="de-DE")
               br.mobile-lr
               |gekochten Bioeiern
             div.menu-item-price-list
-              span.price 7,80 €
+              span.price 7,90 €
           li
             span.menu-item-name_inline Grobe Bratwurst 
             br.mobile-lr 
-            span.menu-item-desc_inline_normal-font mit Kartoffelsalat und 
+            span.menu-item-desc_inline_normal-font mit Bratensoße, 
               br.mobile-lr
-              |Salatbeilage
+              |hausgemachtem Kartoffelpüree 
+              br.mobile-lr
+              |und Sauerkraut 
             div.menu-item-price-list
-              span.price 7,20 €
+              span.price 9,20 €
           li
             span.menu-item-name_inline Matjes hausgemacht 
             br.mobile-lr 
@@ -71,7 +79,15 @@ html(lang="de-DE")
               br.mobile-lr
               |und Bratkartoffeln
             div.menu-item-price-list
-              span.price 8,80 €
+              span.price 9,20 €
+          li
+            span.menu-item-name_inline Bratkartoffeln 
+            br.mobile-lr 
+            span.menu-item-desc_inline_normal-font mit Salat 
+              br.mobile-lr
+              |und Ziegenkäseröllchen 
+            div.menu-item-price-list
+              span.price 8,90 €
           li
             span.menu-item-name_inline Großer Salatteller 
             br.mobile-lr
@@ -82,7 +98,7 @@ html(lang="de-DE")
                 br.mobile-lr
                 |Maultaschen erhältlich)
               div.menu-item-price-list
-                span.price 8,80 €
+                span.price 9,20 €
           li
             span.menu-item-name_inline Schoppen Hofs Salatteller 
             br.mobile-lr
@@ -90,13 +106,13 @@ html(lang="de-DE")
               br.mobile-lr
               |und Apfelweinvinaigrette
             div.menu-item-price-list
-              span.price 8,60 €
+              span.price 8,80 €
           li
             span.menu-item-name_inline Großer Salatteller 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Ziegenkäseröllchen
             div.menu-item-price-list
-              span.price 8,80 €
+              span.price 9,20 €
           li
             span.menu-item-name_inline Käsespätzle 
             br.mobile-lr 
@@ -104,45 +120,51 @@ html(lang="de-DE")
               br.mobile-lr
               |und Salat
             div.menu-item-price-list
-              span.price 8,60 €
+              span.price 8,90 €
           li
             span.menu-item-name_inline Saftig gekochtes Rippchen 
             br.mobile-lr 
-            span.menu-item-desc_inline_normal-font mit Bratkartoffeln und Salat 
+            span.menu-item-desc_inline_normal-font mit hausgemachtem Kartoffelpüree, 
+              br.mobile-lr
+              |und Sauerkraut 
             div.menu-item-price-list
-              span.price 11,80 €
+              span.price 12,40 €
           li
             span.menu-item-name_inline Schnitzel Wiener Art 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Pommes Frites und Salat
             div.menu-item-price-list
-              span.price 11,90 €
+              span.price 12,40 €
           li
             span.menu-item-name_inline Frankfurter Schnitzel 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Grüner Soße und Bratkartoffeln
             div.menu-item-price-list
-              span.price 12,80 €
+              span.price 12,90 €
           li
-            span.menu-item-name_inline Handkässchnitzel „Schoppen Hof Style” 
+            span.menu-item-name_inline Rahmschnitzel 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Zwiebel-Apfelsud, dazu Bratkartoffeln
+            span.menu-item-desc_inline_normal-font mit Preiselbeeren, Pommes Frites 
               br.mobile-lr
               |und Salat
             div.menu-item-price-list
               span.price 13,40 €
           li
-            span.menu-item-name_inline Kalbsschnitzel paniert 
+            span.menu-item-name_inline Kassler vom Schweinerücken 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Kartoffelsalat und kleinem Salat
+            span.menu-item-desc_inline_normal-font mit Bratensoße, Karto elpüree 
+              br.mobile-lr
+              |und Sauerkraut
             div.menu-item-price-list
-              span.price 14,80 €
+              span.price 13,20 €
           li
-            span.menu-item-name_inline Kalbsschnitzel paniert 
+            span.menu-item-name_inline Im Gemüsesud gesottener Tafelspitz 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Grüner Soße und Bratkartoffeln
+            span.menu-item-desc_inline_normal-font auf Meerrettichsoße mit 
+              br.mobile-lr
+              |Wirsinggemüse und Petersilienkartoffeln
             div.menu-item-price-list
-              span.price 15,80 €
+              span.price 16,20 €
           li
             span.menu-item-name_inline Rumpsteak 
             br.mobile-lr
@@ -152,23 +174,29 @@ html(lang="de-DE")
               br.mobile-lr
               |dazu Bratkartoffeln und Salat
             div.menu-item-price-list
-              span.price 15,90 €
+              span.price 18,60 €
         h3.menu-category.menu-category_extra-margin NachSpeisen
         ul 
           li
-            span.menu-item-name_inline Schokoladeneis mit Sahne
+            span.menu-item-name_inline Vanilleeis mit Schokosoße und Sahne 
             div.menu-item-price-list
               span.price 3,80 €
           li
-            span.menu-item-name_inline Vanilleeis mit frischen Erdbeeren 
-              br.mobile-lr
-              |und Sahne 
-            div.menu-item-price-list
-              span.price 4,90 €
-          li
             span.menu-item-name_inline Hessisches Apfeltiramisu im Glas 
             div.menu-item-price-list
-              span.price 3,90 €
+              span.price 4,10 €
+          li
+            span.menu-item-name_inline Kaiserschmarrn mit Roter Grütze 
+              br.mobile-lr
+              |und Vanilleeis 
+            div.menu-item-price-list
+              span.price 4,60 €
+          li
+            span.menu-item-name_inline Kaiserschmarrn groß mit Roter Grütze
+              br.mobile-lr
+              |und Vanilleeis 
+            div.menu-item-price-list
+              span.price 8,60 €
         h3.menu-category.menu-category_extra-margin Für Kleine Gäste
         ul 
           li
@@ -186,6 +214,6 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Nürnberger Bratwürstchen 
               br.mobile-lr
-              |mit Pommes
+              |mit Pommes Frites oder Kartoffelpüree
             div.menu-item-price-list
               span.price 4,80 €
